autosuggestion for city

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
     <title>Feriapp</title>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Serif|Open+Sans:300,400,600,700,800">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSid0H42hr2VCk0kg9khLA9-wJdLoCehs&libraries=places"></script> 
   </head>
   <body>
     <noscript>
