--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/feriapp_round_icon.png" sizes="16x16">
     <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
+    <meta name="description=" content="Feriapp è la prima app che ti aiuta ad ottimizzare le tue ferie e che ti propone le migliori mete per i tuoi ponti">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -24,10 +25,11 @@
     -->
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Serif|Open+Sans:300,400,600,700,800">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <title>Feriapp</title>
+    <title>Feriapp | Vai in vacanza con furbizia</title>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Serif|Open+Sans:300,400,600,700,800">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSid0H42hr2VCk0kg9khLA9-wJdLoCehs&libraries=places"></script> 
+    <meta name="google-site-verification" content="zt8U729dpHWo1RpbenDbzxDAEq7MF-yTJZUgJ2wLovI" />
   </head>
   <body>
     <noscript>
