--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/feriapp_round_icon.png" sizes="32x32">
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/feriapp_round_icon.png" sizes="16x16">
     <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
+    <link href='https://fonts.googleapis.com/css?family=Rubik' rel='stylesheet'>
     <meta name="theme-color" content="#ffffff">
     <meta name="description=" content="Feriapp è la prima app che ti aiuta ad ottimizzare le tue ferie e che ti propone le migliori mete per i tuoi ponti">
     <!--
@@ -29,7 +30,6 @@
     <title>Feriapp | Vai in vacanza con furbizia</title>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Serif|Open+Sans:300,400,600,700,800">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBht1qyrs-X0sfzx2IDnCmxW4MT7sg_A6s&libraries=places"></script> 
     <meta name="google-site-verification" content="zt8U729dpHWo1RpbenDbzxDAEq7MF-yTJZUgJ2wLovI" />
   </head>
   <body>
@@ -37,6 +37,7 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBht1qyrs-X0sfzx2IDnCmxW4MT7sg_A6s&libraries=places"></script> 
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
