--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/feriapp_round_icon.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/feriapp_round_icon.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/feriapp_round_icon-80.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/feriapp_round_icon-80.png" sizes="16x16">
     <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
-    <link href='https://fonts.googleapis.com/css?family=Rubik' rel='stylesheet'>
     <meta name="theme-color" content="#ffffff">
     <meta name="description=" content="Feriapp è la prima app che ti aiuta ad ottimizzare le tue ferie e che ti propone le migliori mete per i tuoi ponti">
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,11 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Serif|Open+Sans:300,400,600,700,800">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <title>Feriapp | Vai in vacanza con furbizia</title>
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Serif|Open+Sans:300,400,600,700,800">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <meta name="google-site-verification" content="zt8U729dpHWo1RpbenDbzxDAEq7MF-yTJZUgJ2wLovI" />
   </head>
   <body>
@@ -37,6 +27,8 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <link href='https://fonts.googleapis.com/css?family=Rubik' rel='stylesheet'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBht1qyrs-X0sfzx2IDnCmxW4MT7sg_A6s&libraries=places"></script> 
     <!--
       This HTML file is a template.
