--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Feriapp | Vai in vacanza con furbizia</title>
+    <title>Feriapp</title>
     <meta name="google-site-verification" content="zt8U729dpHWo1RpbenDbzxDAEq7MF-yTJZUgJ2wLovI" />
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
     <div id="root"></div>
     <link href='https://fonts.googleapis.com/css?family=Rubik' rel='stylesheet'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
