--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- TradeDoubler site verification 3147401 -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/feriapp_round_icon-80.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/feriapp_round_icon-80.png" sizes="16x16">
-    <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="theme-color" content="#ffffff">
-    <meta name="description=" content="Feriapp è la prima app che ti aiuta ad ottimizzare le tue ferie e che ti propone le migliori mete per i tuoi ponti">
-    <!--
+
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CS5YHCB4LC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-CS5YHCB4LC');
+  </script>
+  <!-- TradeDoubler site verification 3147401 -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/feriapp_round_icon-80.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/feriapp_round_icon-80.png" sizes="16x16">
+  <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="theme-color" content="#ffffff">
+  <meta name="description="
+    content="Feriapp è la prima app che ti aiuta ad ottimizzare le tue ferie e che ti propone le migliori mete per i tuoi ponti">
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -19,15 +30,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Feriapp</title>
-    <meta name="google-site-verification" content="zt8U729dpHWo1RpbenDbzxDAEq7MF-yTJZUgJ2wLovI" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <link href='https://fonts.googleapis.com/css?family=Rubik' rel='stylesheet'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBht1qyrs-X0sfzx2IDnCmxW4MT7sg_A6s&libraries=places"></script> 
-    <!--
+  <title>Feriapp</title>
+  <meta name="google-site-verification" content="zt8U729dpHWo1RpbenDbzxDAEq7MF-yTJZUgJ2wLovI" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <link href='https://fonts.googleapis.com/css?family=Rubik' rel='stylesheet'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBht1qyrs-X0sfzx2IDnCmxW4MT7sg_A6s&libraries=places"></script>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -37,5 +50,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
