visual changes to info page

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="theme-color" content="#ffffff">
   <meta name="description="
-    content="Feriapp è la prima app che ti aiuta ad ottimizzare le tue ferie e che ti propone le migliori mete per i tuoi ponti">
+    content="Feriapp helps you to find the best days to go on vacation. Customize your research by entering the city where you work, your days off and your available leave days.">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
