--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Feriapp - Organize your holidays in a smart way</title>
+  <title>Feriapp - Organize your holidays in the smartest way</title>
   <meta name="google-site-verification" content="zt8U729dpHWo1RpbenDbzxDAEq7MF-yTJZUgJ2wLovI" />
 </head>
 
